Padding and minor spacing corrected in workspace

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
     display: grid;
     grid-template-columns: 3fr 1fr;
     gap: 40px;
-    padding: 20px 45px 60px 20px;
+    padding: 20px 35px 60px 20px;
     
 
 }
@@ -77,7 +77,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    gap: 40px;
+    column-gap: 40px;
+    row-gap: 30px;
     
 }
 
